# omni-gumshoe

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
omni_gumshoe/: __init__.py  apps.py  signals.py
tests/: factories.py  settings.py  test_signals.py
