[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:omni_gumshoe/__init__.py]

[metadata]
description-file = README.rst

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    omni_gumshoe/migrations,
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 89
